--- a/app/build.gradle
+++ b/app/build.gradle
@@ -16,6 +16,12 @@ android {
 
     }
 
+    externalNativeBuild {
+        ndkBuild {
+            path file('src/main/cpp/Android.mk')
+        }
+    }
+
     buildTypes {
        release {
            minifyEnabled false
@@ -23,16 +29,15 @@ android {
        }
     }
 
-    externalNativeBuild {
-        ndkBuild {
-            path file('src/main/cpp/Android.mk')
-        }
-    }
-
     aaptOptions {
         noCompress "dict"
     }
-
+    ndkVersion '23.0.7599858'
+    buildToolsVersion '31.0.0'
+    compileOptions {
+        sourceCompatibility JavaVersion.VERSION_1_8
+        targetCompatibility JavaVersion.VERSION_1_8
+    }
 }
 
 dependencies {
